banking-lab.yaml
apiVersion: v1
kind: Pod
metadata:
  name: core-banking
  labels:
    app: core-banking
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: mobile-gateway
  labels:
    app: mobile-gateway
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["sleep", "3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: rogue-pod
  labels:
    app: hacker
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["sleep", "3600"]
